# mesoSPIM-lazy-loader

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
mesospim_lazy_loader/: __init__.py  mesospim_metadata_reader.py  napari.yaml  read_sample.py  utils.py
mesospim_lazy_loader/_tests/: test_reader.py
src/mesospim_lazy_loader/: __init__.py  napari.yaml  read_sample.py  utils.py
