[metadata]
name = mesoSPIM-lazy-loader
version = 0.0.1
description = Lazy-load all acquired channels from a mesoSPIM acquisition.
long_description = file: README.md
long_description_content_type = text/markdown

author = Rob Campbell
author_email = git@raacampbell.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    napari[all]
    zarr

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    mesoSPIM-lazy-loader = mesospim_lazy_loader:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
